[package]
name = "repl_deploy"
version = "0.1.0"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

[dependencies]
rsa = "0.4.0"
serde_json = "1.0.64"
clap = "2.33.3"
anyhow = "1.0.40"
tokio = { version = "1.6.1", features = ["rt-multi-thread", "macros"]}
warp = "0.3"
serde = { version = "1.0.126", features = ["derive"]  }
regex = "1.5.4"
base64 = "0.13.0"
sha2 = "0.9.5"
log = "0.4.14"
pretty_env_logger = "0.4.0"

[dev-dependencies]
rand = "0.8.3"