[package]
name = "cli"
version = "0.1.0"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../static/constants" }
types = { path = "../static/types" }
git_updater = { path = "../functionality/git_updater" }
logger = { path = "../functionality/logger" }
http_event_handler = { path = "../event_handlers/http_event_handler" }
stdio_event_handler = { path = "../event_handlers/stdio_event_handler" }

rsa = "0.4.0"
serde_json = "1.0.64"
clap = "2.33.3"
tokio = "1.4.0"
anyhow = "1.0.40"
