[package]
name = "http_event_handler"
version = "0.1.0"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../../static/constants"}
types = { path = "../../static/types" }
logger = { path = "../../functionality/logger" }
signature_verifier = { path = "../../functionality/signature_verifier" }

tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.125", features = ["derive"]  }
rsa = "0.4.0"
anyhow = "1.0.40"

[dev-dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
rand = "0.8.3"
reqwest = "0.11.2"
serde_json = "1.0.64"
sha2 = "0.9.3"
