[package]
name = "stdio_event_handler"
version = "0.1.0"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
constants = { path = "../../static/constants" }
types = { path = "../../static/types" }
logger = { path = "../../functionality/logger" }
signature_verifier = { path = "../../functionality/signature_verifier" }
rsa = "0.4.0"
regex = "1.4.5"
serde_json = "1.0.64"
anyhow = "1.0.40"
serde = "1.0.125"
