[package]
name = "types"
version = "0.1.0"
authors = ["Khushraj Rathod <khushraj.rathod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
serde = { version = "1.0.125", features = ["derive"] }
